policies/container-image-must-not-have-latest-tag.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedTags
metadata:
  name: container-image-must-not-have-latest-tag
spec:
  enforcementAction: deny #deny # or dryrun
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod
    excludedNamespaces:
      - kube-system
      - kube-node-lease
      - kube-public
      - gatekeeper-system
      - config-management-system
      - config-management-monitoring
      - resource-group-system
      - gke-connect
      - istio-system
      - asm-system
      - default
      - capi-system
      - vm-system
      - gke-managed-metrics-server
      - cert-manager
      - anthos-creds
      - capi-kubeadm-bootstrap-system
      - gke-system
      - anthos-identity-service
  parameters:
    exemptImages:
    - openpolicyagent/opa-exp:latest
    tags:
    - latest
