policies/network-policies-required-for-ns.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireNamespaceNetworkPolicies
metadata:
  name: require-namespace-network-policies-sample
spec:
  enforcementAction: dryrun
  match:
    excludedNamespaces:
      - kube-system
      - kube-node-lease
      - kube-public
      - gatekeeper-system
      - config-management-system
      - config-management-monitoring
      - resource-group-system
      - gke-connect
      - istio-system
      - asm-system
      - default
      - capi-system
      - vm-system
      - gke-managed-metrics-server
      - cert-manager
      - anthos-creds
      - capi-kubeadm-bootstrap-system
      - gke-system
      - anthos-identity-service
